[package]
name = "netbackup"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio={version ="1", features=["full"] }
sha2="0.10"

[[bin]]
name="server"
path="src/main.rs"

[[bin]]
name="client"
path="src/client.rs"

[[bin]]
name="chunked"
path="src/chunked_client.rs"

[[bin]]
name="concurrent"
path="src/concurrent_test.rs"
